--- a/rebar.config
+++ b/rebar.config
@@ -8,7 +8,7 @@
 {escript_emu_args, "%%! +sbtu +A0\n"}.
 
 %% Plugins
-{plugins, [coveralls]}.
+{plugins, [rebar3_proper, coveralls]}.
 
 %% Profiles
 {profiles, [{test,
@@ -16,5 +16,6 @@
               {cover_enabled, true},
               {cover_export_enabled, true},
               {coveralls_coverdata    , "_build/test/cover/ct.coverdata"},
-              {coveralls_service_name , "travis-ci"}
+              {coveralls_service_name , "travis-ci"},
+              {deps, [{proper, "1.2.0"}]}
             ]}]}.
